hello_world/deployment_hello-world.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: hello-world
  labels: 
    app: hello-world
    tier: devops
spec: 
  selector: 
    matchLabels: 
      app: hello-world
  replicas: 1
  template: 
    metadata:
      labels:
        app: hello-world
    spec:
      containers: 
        - name: hello-world
          image: dockercloud/hello-world
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
