hello_world/service_hw.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-world
spec: 
  selector: 
    app: hello-world
  ports:
    - protocol : TCP
      port: 80
      targetPort: 80
