hello_world/ingress_hw.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  rules:    
  - host: helloworld.julie
    http:
      paths:   
        - path: /     
          pathType: Prefix
          backend:
            service:
              name: hello-world
              port:
                number: 80
